deploy/kubernetes/manifests/04-carts-db-ss.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: carts-db
  namespace: sock-shop
spec:
  serviceName: carts-db
  replicas: 1
  selector:
    matchLabels:
      name: carts-db
  template:
    metadata:
      labels:
        name: carts-db
    spec:
      securityContext:
        fsGroup: 999

      containers:
      - name: carts-db
        image: mongo:3.4
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 27017
          name: mongo

        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi

        volumeMounts:
        - name: carts-db-data
          mountPath: /data/db

        startupProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - mongo --quiet --eval "db.adminCommand('ping')"
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 30

        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - mongo --quiet --eval "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 15
          failureThreshold: 6

        livenessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - mongo --quiet --eval "db.adminCommand('ping')"
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 15
          failureThreshold: 5
  volumeClaimTemplates:
  - metadata:
      name: carts-db-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "standard-rwo"  # o "pd.csi.storage.gke.io"
      resources:
        requests:
          storage: 5Gi
