deploy/kubernetes/manifests/15-orders-db-ss.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: orders-db
  namespace: sock-shop
spec:
  serviceName: orders-db
  replicas: 1

  selector:
    matchLabels:
      name: orders-db

  template:
    metadata:
      labels:
        name: orders-db
    spec:
      securityContext:
        fsGroup: 999

      containers:
      - name: orders-db
        image: mongo:3.4
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 27017
          name: mongo

        resources:
          requests:
            cpu: 200m       # Increase
            memory: 512Mi   # Increase
          limits:
            cpu: 1000m      # Increase
            memory: 2Gi     # Increase

        volumeMounts:
        - name: orders-db-data
          mountPath: /data/db

        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - mongo --quiet --eval "db.adminCommand('ping')"
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 30

        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - mongo --quiet --eval "db.adminCommand('ping')"
          initialDelaySeconds: 30
          periodSeconds: 20
          timeoutSeconds: 15
          failureThreshold: 6

        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - mongo --quiet --eval "db.adminCommand('ping')"
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 15
          failureThreshold: 5
  volumeClaimTemplates:
  - metadata:
      name: orders-db-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "standard-rwo"  # o "pd.csi.storage.gke.io"
      resources:
        requests:
          storage: 5Gi
