deploy/kubernetes/manifests/26-session-db-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-db
  labels:
    name: session-db
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: session-db
  template:
    metadata:
      labels:
        name: session-db
      annotations:
        prometheus.io.scrape: "false"
    spec:
      containers:
      - name: session-db
        image: redis:alpine
        command:
          - "redis-server"
          - "/usr/local/etc/redis/redis.conf"
        ports:
        - name: redis
          containerPort: 6379
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 128Mi
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: false
        volumeMounts:
        - name: session-db-data
          mountPath: /data
        - name: redis-config
          mountPath: /usr/local/etc/redis
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - redis-cli ping > /dev/null 2>&1
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - redis-cli ping > /dev/null 2>&1
          initialDelaySeconds: 15
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 10
      volumes:
      - name: session-db-data
        persistentVolumeClaim:
          claimName: session-db-pvc
      - name: redis-config
        configMap:
          name: redis-config
      nodeSelector:
        beta.kubernetes.io/os: linux
