deploy/kubernetes/manifests/32-user-db-ss.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-db
  labels:
    name: user-db
  namespace: sock-shop
spec:
  serviceName: "user-db"
  replicas: 1
  selector:
    matchLabels:
      name: user-db
  volumeClaimTemplates:
  - metadata:
      name: user-db-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "standard-rwo"  # o "pd.csi.storage.gke.io"
      resources:
        requests:
          storage: 5Gi
  template:
    metadata:
      labels:
        name: user-db
    spec:
      containers:
      - name: user-db
        image: weaveworksdemos/user-db:0.3.0
        ports:
        - name: mongo
          containerPort: 27017
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - mongo --eval "db.adminCommand('ping')" > /dev/null 2>&1
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 3
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - mongo --eval "db.adminCommand('ping')" > /dev/null 2>&1
          initialDelaySeconds: 45
          periodSeconds: 5
          failureThreshold: 3
          timeoutSeconds: 10
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: false
        volumeMounts:
        - name: user-db-data
          mountPath: /data/db
        - mountPath: /tmp
          name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
